# home-security-system

./: .gitignore  .pylintrc  LICENSE  README.md  hss.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  servicer.py  tox.ini
.github/workflows/: reviewer.yaml
core/: internals.py  observer_eye.py  observer_wifi.py
core/observers/observer/: base_observer.py  hss_observer.py
core/observers/subject/: base_subject.py  eye_subject.py  wifi_subject.py
core/strategies/detectors/: base_detector_strategy.py  efficientdet_strategy.py  hog_descriptor_strategy.py
core/strategies/eye/: base_eye_strategy.py  camera_strategy.py  picamera_strategy.py  usbcamera_strategy.py
core/strategies/notifier/: base_notifier_strategy.py  telegram_strategy.py  whatsapp_strategy.py
core/strategies/wifi/: admin_panel_strategy.py  base_wifi_strategy.py  ipaddress_strategy.py  macaddress_strategy.py
core/utils/: datatypes.py  fileio_adaptor.py  logger.py  program_launcher.py
services/: hss.service
system/: hss.service.template  logrotate  servicefile  telegram-servicer.service.template
